; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_lpf_msa.c_ff_vp8_v_loop_filter16_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_lpf_msa.c_ff_vp8_v_loop_filter16_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_vp8_v_loop_filter16_msa(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %26 = load i32, i32* %8, align 4
  %27 = call i64 @__msa_fill_b(i32 %26)
  store i64 %27, i64* %25, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i64 @__msa_fill_b(i32 %28)
  store i64 %29, i64* %24, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i64 @__msa_fill_b(i32 %30)
  store i64 %31, i64* %23, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* %7, align 4
  %34 = shl i32 %33, 2
  %35 = sext i32 %34 to i64
  %36 = sub i64 0, %35
  %37 = getelementptr inbounds i32, i32* %32, i64 %36
  store i32* %37, i32** %11, align 8
  %38 = load i32*, i32** %11, align 8
  %39 = load i32, i32* %7, align 4
  %40 = load i64, i64* %12, align 8
  %41 = load i64, i64* %13, align 8
  %42 = load i64, i64* %14, align 8
  %43 = load i64, i64* %15, align 8
  %44 = load i64, i64* %19, align 8
  %45 = load i64, i64* %18, align 8
  %46 = load i64, i64* %17, align 8
  %47 = load i64, i64* %16, align 8
  %48 = call i32 @LD_UB8(i32* %38, i32 %39, i64 %40, i64 %41, i64 %42, i64 %43, i64 %44, i64 %45, i64 %46, i64 %47)
  %49 = load i64, i64* %12, align 8
  %50 = load i64, i64* %13, align 8
  %51 = load i64, i64* %14, align 8
  %52 = load i64, i64* %15, align 8
  %53 = load i64, i64* %19, align 8
  %54 = load i64, i64* %18, align 8
  %55 = load i64, i64* %17, align 8
  %56 = load i64, i64* %16, align 8
  %57 = load i64, i64* %24, align 8
  %58 = load i64, i64* %25, align 8
  %59 = load i64, i64* %23, align 8
  %60 = load i64, i64* %21, align 8
  %61 = load i64, i64* %20, align 8
  %62 = load i64, i64* %22, align 8
  %63 = call i32 @LPF_MASK_HEV(i64 %49, i64 %50, i64 %51, i64 %52, i64 %53, i64 %54, i64 %55, i64 %56, i64 %57, i64 %58, i64 %59, i64 %60, i64 %61, i64 %62)
  %64 = load i64, i64* %13, align 8
  %65 = load i64, i64* %14, align 8
  %66 = load i64, i64* %15, align 8
  %67 = load i64, i64* %19, align 8
  %68 = load i64, i64* %18, align 8
  %69 = load i64, i64* %17, align 8
  %70 = load i64, i64* %20, align 8
  %71 = load i64, i64* %21, align 8
  %72 = call i32 @VP8_MBFILTER(i64 %64, i64 %65, i64 %66, i64 %67, i64 %68, i64 %69, i64 %70, i64 %71)
  %73 = load i32*, i32** %6, align 8
  %74 = load i32, i32* %7, align 4
  %75 = mul nsw i32 3, %74
  %76 = sext i32 %75 to i64
  %77 = sub i64 0, %76
  %78 = getelementptr inbounds i32, i32* %73, i64 %77
  store i32* %78, i32** %11, align 8
  %79 = load i64, i64* %13, align 8
  %80 = load i64, i64* %14, align 8
  %81 = load i64, i64* %15, align 8
  %82 = load i64, i64* %19, align 8
  %83 = load i32*, i32** %11, align 8
  %84 = load i32, i32* %7, align 4
  %85 = call i32 @ST_UB4(i64 %79, i64 %80, i64 %81, i64 %82, i32* %83, i32 %84)
  %86 = load i32, i32* %7, align 4
  %87 = mul nsw i32 4, %86
  %88 = load i32*, i32** %11, align 8
  %89 = sext i32 %87 to i64
  %90 = getelementptr inbounds i32, i32* %88, i64 %89
  store i32* %90, i32** %11, align 8
  %91 = load i64, i64* %18, align 8
  %92 = load i64, i64* %17, align 8
  %93 = load i32*, i32** %11, align 8
  %94 = load i32, i32* %7, align 4
  %95 = call i32 @ST_UB2(i64 %91, i64 %92, i32* %93, i32 %94)
  ret void
}

declare dso_local i64 @__msa_fill_b(i32) #1

declare dso_local i32 @LD_UB8(i32*, i32, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @LPF_MASK_HEV(i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @VP8_MBFILTER(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @ST_UB4(i64, i64, i64, i64, i32*, i32) #1

declare dso_local i32 @ST_UB2(i64, i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
